--- a/readme
+++ b/readme
@@ -1,6 +1,7 @@
 git add *.cpp, "*.cpp"
-git add *.cc
-git add *.c
+git add "*.cc"
+git add "*.c"
+git clean -dxf .
 
 build_and_run: /usr/bin/g++ -fdiagnostics-color=always -g /root/project/dev/leetcode/leetcode-master/src/demo/acm.cpp -o /root/project/dev/leetcode/leetcode-master/src/demo/acm
 
@@ -48,4 +49,7 @@ snipper:
 		],
 	}
 }
+
+编程技巧:
+ascii码相减: i - 'a'
 
